# Potenup

./: .gitignore  01_파이썬_기초_문법(변수,자료형).ipynb  02_파이썬_기초_문법(제어문)_1week_homework.ipynb  03_파이썬_기초_문법(함수)_blank (1).ipynb  04_실습_homework.ipynb  04_판다스.ipynb  04_판다스_blank.ipynb  04_판다스_보충.ipynb  05_시각화.ipynb  06_데이터분석_따릉이.ipynb  08_OPEN_API.ipynb  09_Beautiful_soup(pr).ipynb  README.md  coding(11~20).ipynb  coding(1~10).ipynb  coding(21~30).ipynb  coding(31~40).ipynb  coding(41~50).ipynb  pyproject.toml
